Repair L3.1 native NULL row insertion