@@ -32,6 +32,7 @@ import io.github.ggeorg.delosdb.spi.storage.versioned.VersionedTableStats;
 
 import java.sql.SQLException;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
@@ -489,7 +490,7 @@ public final class EngineMvccTableAccess
         for (StoreDataValue value : row.values()) {
             values.add(nativeValue(value));
         }
-        return List.copyOf(values);
+        return Collections.unmodifiableList(values);
     }
 
     private static String normalize(String value) {
